CSS removal to fix the year drop-down not showing.

--- a/src/heat.js.scss
+++ b/src/heat.js.scss
@@ -357,7 +357,6 @@ div.heat-js {
         display: flex;
         align-items: center;
         justify-content: right;
-        overflow-x: hidden;
 
         @include styles.buttons;
 
